--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "next lint --fix",
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
       "prettier --write"
     ]
   }
