--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "formik": "^2.4.5",
+    "i18n-iso-countries": "^7.13.0",
     "iconsax-react": "^0.0.8",
     "jose": "^5.2.1",
     "jspdf": "^2.5.2",
